--- a/ebooks/popnovel/jingshitongyan/jsty03.html
+++ b/ebooks/popnovel/jingshitongyan/jsty03.html
@@ -257,4 +257,4 @@
 
 <p>
 <hr>
-<a href="jsty04.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty04.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
