--- a/ebooks/popnovel/jingshitongyan/jsty17.html
+++ b/ebooks/popnovel/jingshitongyan/jsty17.html
@@ -238,4 +238,4 @@
 　　　　秋菊春桃时各有，何须海底去捞针。
 <p>
 <hr>
-<a href="jsty18.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty18.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
