--- a/ebooks/popnovel/jingshitongyan/jsty18.html
+++ b/ebooks/popnovel/jingshitongyan/jsty18.html
@@ -210,4 +210,4 @@
 　　　　但学幡桃能结果，三千余岁未为长。
 <p>
 <hr>
-<a href="jsty19.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty19.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
