--- a/ebooks/popnovel/jingshitongyan/jsty22.html
+++ b/ebooks/popnovel/jingshitongyan/jsty22.html
@@ -411,4 +411,4 @@
 　　　　《金刚经》消除灾难，破毡笠团圆骨肉。
 <p>
 <hr>
-<a href="jsty23.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty23.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
