--- a/ebooks/popnovel/jingshitongyan/jsty24.html
+++ b/ebooks/popnovel/jingshitongyan/jsty24.html
@@ -783,4 +783,4 @@
 ¡¡¡¡·çÁ÷×ÓµÜÖª¶àÉÙ£¬·ò¹óÆÞÈÙÓÐ¶ùÈË£¿
 <p>
 <hr>
-<a href="jsty25.html">ÏÂÒ»¾í</a>  <a href="_content.html">»ØÄ¿Â¼</a></body></html>
+<a href="jsty25.html">ÏÂÒ»¾í</a>  <a href="content.html">»ØÄ¿Â¼</a></body></html>
