--- a/ebooks/popnovel/jingshitongyan/jsty25.html
+++ b/ebooks/popnovel/jingshitongyan/jsty25.html
@@ -457,4 +457,4 @@
 　　　　奉功世人行好事，皇天不佑负心郎！<br>
 <p>
 <hr>
-<a href="jsty26.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty26.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
