--- a/ebooks/popnovel/jingshitongyan/jsty26.html
+++ b/ebooks/popnovel/jingshitongyan/jsty26.html
@@ -240,4 +240,4 @@
 ¡¡¡¡¡¡¡¡ËÀ¼ûÑÖ¾ýÃæ²»²Ñ£¬²ÅÊÇÌÃÌÃºÃÄÐ×Ó¡£<br>
 <p>
 <hr>
-<a href="jsty27.html">ÏÂÒ»¾í</a>  <a href="_content.html">»ØÄ¿Â¼</a></body></html>
+<a href="jsty27.html">ÏÂÒ»¾í</a>  <a href="content.html">»ØÄ¿Â¼</a></body></html>
