--- a/ebooks/popnovel/jingshitongyan/jsty27.html
+++ b/ebooks/popnovel/jingshitongyan/jsty27.html
@@ -208,4 +208,4 @@
 　　　　人心不被邪淫惑，眼底蓬莱便可寻。<br>
 <p>
 <hr>
-<a href="jsty28.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty28.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
