--- a/ebooks/popnovel/jingshitongyan/jsty28.html
+++ b/ebooks/popnovel/jingshitongyan/jsty28.html
@@ -604,4 +604,4 @@
 　　　　色即是空空即色，空空色色要分明。<br>
 <p>
 <hr>
-<a href="jsty29.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty29.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
