--- a/ebooks/popnovel/jingshitongyan/jsty29.html
+++ b/ebooks/popnovel/jingshitongyan/jsty29.html
@@ -201,4 +201,4 @@
 　　　　同是风流千古话，西厢不及宿香亭。<br>
 <p>
 <hr>
-<a href="jsty30.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty30.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
