--- a/ebooks/popnovel/jingshitongyan/jsty30.html
+++ b/ebooks/popnovel/jingshitongyan/jsty30.html
@@ -267,4 +267,4 @@
 ¡¡¡¡¡¡¡¡ÊÀÉÏÓÐÇé½ÔËÆ´Ë£¬·ÖÃ÷»ðÕ¬ÏÖ½ðÁ«¡£<br>
 <p>
 <hr>
-<a href="jsty31.html">ÏÂÒ»¾í</a>  <a href="_content.html">»ØÄ¿Â¼</a></body></html>
+<a href="jsty31.html">ÏÂÒ»¾í</a>  <a href="content.html">»ØÄ¿Â¼</a></body></html>
