--- a/ebooks/popnovel/jingshitongyan/jsty32.html
+++ b/ebooks/popnovel/jingshitongyan/jsty32.html
@@ -337,4 +337,4 @@
 ¡¡¡¡Èô½«Çé×ÖÄÜ²ÎÍ¸£¬»½×÷·çÁ÷Ò²²»²Ñ¡£
 <p>
 <hr>
-<a href="jsty33.html">ÏÂÒ»¾í</a>  <a href="_content.html">»ØÄ¿Â¼</a></body></html>
+<a href="jsty33.html">ÏÂÒ»¾í</a>  <a href="content.html">»ØÄ¿Â¼</a></body></html>
