--- a/ebooks/popnovel/jingshitongyan/jsty33.html
+++ b/ebooks/popnovel/jingshitongyan/jsty33.html
@@ -312,4 +312,4 @@
 　　从来好色亡家国，岂见诗书误了人。
 <p>
 <hr>
-<a href="jsty34.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty34.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
