--- a/ebooks/popnovel/jingshitongyan/jsty34.html
+++ b/ebooks/popnovel/jingshitongyan/jsty34.html
@@ -387,4 +387,4 @@
 心端的欲如何？若云薄幸无冤报，请读当年《长恨歌》。
 <p>
 <hr>
-<a href="jsty35.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty35.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
