--- a/ebooks/popnovel/jingshitongyan/jsty36.html
+++ b/ebooks/popnovel/jingshitongyan/jsty36.html
@@ -201,4 +201,4 @@
 　　若是世人能辨假，真人不用诉明神。
 <p>
 <hr>
-<a href="jsty37.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty37.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
