--- a/ebooks/popnovel/jingshitongyan/jsty39.html
+++ b/ebooks/popnovel/jingshitongyan/jsty39.html
@@ -194,5 +194,5 @@
 　　网络图书扫描校对
 <p>
 <hr>
-<a href="jsty40.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="jsty40.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
