--- a/ebooks/popnovel/jingshitongyan/jsty01.html
+++ b/ebooks/popnovel/jingshitongyan/jsty01.html
@@ -217,4 +217,4 @@
 
 <p>
 <hr>
-<a href="jsty02.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty02.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
