--- a/ebooks/popnovel/jingshitongyan/jsty04.html
+++ b/ebooks/popnovel/jingshitongyan/jsty04.html
@@ -264,4 +264,4 @@
 
 <p>
 <hr>
-<a href="jsty05.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty05.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
