--- a/ebooks/popnovel/jingshitongyan/jsty05.html
+++ b/ebooks/popnovel/jingshitongyan/jsty05.html
@@ -215,4 +215,4 @@
 
 <p>
 <hr>
-<a href="jsty06.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty06.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
