--- a/ebooks/popnovel/jingshitongyan/jsty06.html
+++ b/ebooks/popnovel/jingshitongyan/jsty06.html
@@ -318,4 +318,4 @@
 
 <p>
 <hr>
-<a href="jsty07.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty07.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
