--- a/ebooks/popnovel/jingshitongyan/jsty07.html
+++ b/ebooks/popnovel/jingshitongyan/jsty07.html
@@ -198,4 +198,4 @@
 
 <p>
 <hr>
-<a href="jsty08.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty08.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
