--- a/ebooks/popnovel/jingshitongyan/jsty09.html
+++ b/ebooks/popnovel/jingshitongyan/jsty09.html
@@ -284,4 +284,4 @@
 
 <p>
 <hr>
-<a href="jsty10.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty10.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
