--- a/ebooks/popnovel/jingshitongyan/jsty10.html
+++ b/ebooks/popnovel/jingshitongyan/jsty10.html
@@ -183,4 +183,4 @@
 
 <p>
 <hr>
-<a href="jsty11.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty11.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
