--- a/ebooks/popnovel/jingshitongyan/jsty11.html
+++ b/ebooks/popnovel/jingshitongyan/jsty11.html
@@ -573,4 +573,4 @@
 
 <p>
 <hr>
-<a href="jsty12.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty12.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
