--- a/ebooks/popnovel/jingshitongyan/jsty12.html
+++ b/ebooks/popnovel/jingshitongyan/jsty12.html
@@ -186,4 +186,4 @@
 
 <p>
 <hr>
-<a href="jsty13.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty13.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
