--- a/ebooks/popnovel/jingshitongyan/jsty13.html
+++ b/ebooks/popnovel/jingshitongyan/jsty13.html
@@ -252,4 +252,4 @@
 
 <p>
 <hr>
-<a href="jsty14.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty14.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
