--- a/ebooks/popnovel/jingshitongyan/jsty15.html
+++ b/ebooks/popnovel/jingshitongyan/jsty15.html
@@ -412,4 +412,4 @@
 
 <p>
 <hr>
-<a href="jsty16.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty16.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
