--- a/ebooks/popnovel/jingshitongyan/jsty16.html
+++ b/ebooks/popnovel/jingshitongyan/jsty16.html
@@ -221,4 +221,4 @@
 　　　　少年得似张主管，鬼祸人非两不侵。
 <p>
 <hr>
-<a href="jsty17.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty17.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
