--- a/ebooks/popnovel/jingshitongyan/jsty19.html
+++ b/ebooks/popnovel/jingshitongyan/jsty19.html
@@ -263,4 +263,4 @@
 　　　　一自真人明断后，行人但道永无忧。
 <p>
 <hr>
-<a href="jsty20.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty20.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
