--- a/ebooks/popnovel/jingshitongyan/jsty20.html
+++ b/ebooks/popnovel/jingshitongyan/jsty20.html
@@ -285,4 +285,4 @@
 　　　　劝君莫害非常物，祸福冥中报不虚。
 <p>
 <hr>
-<a href="jsty21.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty21.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
