--- a/ebooks/popnovel/jingshitongyan/jsty21.html
+++ b/ebooks/popnovel/jingshitongyan/jsty21.html
@@ -387,4 +387,4 @@
 　　　　汉唐吕武纷多事，谁及英雄赵大郎！
 <p>
 <hr>
-<a href="jsty22.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty22.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
