--- a/ebooks/popnovel/jingshitongyan/jsty23.html
+++ b/ebooks/popnovel/jingshitongyan/jsty23.html
@@ -221,4 +221,4 @@
 　　　　钟情若到真深处，生死风波总不妨。
 <p>
 <hr>
-<a href="jsty24.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty24.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
