--- a/ebooks/popnovel/jingshitongyan/jsty31.html
+++ b/ebooks/popnovel/jingshitongyan/jsty31.html
@@ -237,4 +237,4 @@
 　　如此红颜千古少，劝君还是莫贪花！
 <p>
 <hr>
-<a href="jsty32.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty32.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
