--- a/ebooks/popnovel/jingshitongyan/jsty35.html
+++ b/ebooks/popnovel/jingshitongyan/jsty35.html
@@ -266,4 +266,4 @@
 　　支赤棍奸谋似鬼，况青天折狱如神。
 <p>
 <hr>
-<a href="jsty36.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="jsty36.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
