--- a/ebooks/popnovel/paianjingqi_1/chuke01.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke01.html
@@ -362,5 +362,5 @@
 <p>　　　　运退黄金失色，时来顽铁生辉。
 <br>　　　　莫与痴人说梦，思量海外寻龟。
 <p><hr>
-<a href="chuke02.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke02.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
