--- a/ebooks/popnovel/paianjingqi_1/chuke04.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke04.html
@@ -242,5 +242,5 @@
 <br>　　　　贤佞能精别，恩仇不浪施。
 <br>　　　　何当时假腕，刬尽负心儿！
 <p><hr>
-<a href="chuke05.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke05.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
