--- a/ebooks/popnovel/paianjingqi_1/chuke07.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke07.html
@@ -218,5 +218,5 @@
 <p>　　　　好道秦王与汉王，岂知治道在经常？
 <br>　　　　纵然法术无穷幻，不救杨家一命亡。
 <p><hr>
-<a href="chuke08.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke08.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
