--- a/ebooks/popnovel/paianjingqi_1/chuke08.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke08.html
@@ -238,5 +238,5 @@
 <p>　　　　胯下曾酬一饭金，谁知剧盗有情深
 <br>　　　　世间每说奇男女，何必儒林胜绿林！
 <p><hr>
-<a href="chuke09.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke09.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
