--- a/ebooks/popnovel/paianjingqi_1/chuke10.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke10.html
@@ -263,5 +263,5 @@
 <p>　　　　蒙正当年也困穷，休将肉眼看英雄！
 <br>　　　　堪夸仗义人难得，太守廉明即古洪。
 <p><hr>
-<a href="chuke11.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke11.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
