--- a/ebooks/popnovel/paianjingqi_1/chuke12.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke12.html
@@ -220,5 +220,5 @@
 <p>　　片言得妇是奇缘，此等新闻本可传。
 扭捏无揣殊舛错，故将话本与重宣。
 <p><hr>
-<a href="chuke13.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke13.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
