--- a/ebooks/popnovel/paianjingqi_1/chuke14.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke14.html
@@ -196,5 +196,5 @@
 <p>　　人杀人而成鬼，鬼借人以证人。
 人鬼公然相报，冤家宜结宜分。
 <p><hr>
-<a href="chuke15.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke15.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
