--- a/ebooks/popnovel/paianjingqi_1/chuke15.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke15.html
@@ -243,5 +243,5 @@
 <p>　　　　撒漫虽然会破家，欺贪克剥也难夸！
 <br>　　　　试看横事无端至，只为生平种毒赊。
 <p><hr>
-<a href="chuke16.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke16.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
