--- a/ebooks/popnovel/paianjingqi_1/chuke16.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke16.html
@@ -223,5 +223,5 @@
 <p>　　　　女侠堪夸陆蕙娘，能从萍水识檀郎。
 <br>　　　　巧机反借机来用，毕竟强中手更强。
 <p><hr>
-<a href="chuke17.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke17.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
