--- a/ebooks/popnovel/paianjingqi_1/chuke17.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke17.html
@@ -519,5 +519,5 @@
 <p>　　　　黄堂太尹最神明，忤逆加诛法不轻。
 <br>　　　　偏为鞠奸成反案，从前不是浪施刑。
 <p><hr>
-<a href="chuke18.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke18.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
