--- a/ebooks/popnovel/paianjingqi_1/chuke18.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke18.html
@@ -284,5 +284,5 @@
 <p>　　　　丹术须先断情欲，尘缘岂许相驰逐？
 <br>　　　　贪淫若是望丹成，阴沟洞里天鹅肉。
 <p><hr>
-<a href="chuke19.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke19.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
