--- a/ebooks/popnovel/paianjingqi_1/chuke19.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke19.html
@@ -268,5 +268,5 @@
 <p>　　　　梦寐能通造化机，天教达识剖玄微。
 <br>　　　　姓名一解终能报，方信双魂不浪归。
 <p><hr>
-<a href="chuke20.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke20.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
