--- a/ebooks/popnovel/paianjingqi_1/chuke20.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke20.html
@@ -473,5 +473,5 @@
 <p>　　　　阴阳总一理，祸福唯自求。
 <br>　　　　莫道天公远，须看刺史刘。
 <p><hr>
-<a href="chuke21.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke21.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
