--- a/ebooks/popnovel/paianjingqi_1/chuke21.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke21.html
@@ -195,5 +195,5 @@
 <br>　　　　京华重忆主人情，一见袁公便起惊。
 <br>　　　　阴功获福从来有，始信时名不浪称。
 <p><hr>
-<a href="chuke22.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke22.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
