--- a/ebooks/popnovel/paianjingqi_1/chuke24.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke24.html
@@ -274,5 +274,5 @@
 <p>　　　　崎岖石洞老光阴，只此幽栖致自深。
 <br>　　　　诛殛忽然烦大士，方知佛戒重邪淫。
 <p><hr>
-<a href="chuke25.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke25.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
