--- a/ebooks/popnovel/paianjingqi_1/chuke25.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke25.html
@@ -217,5 +217,5 @@
 <p>　　　　血躯总属有情伦，字有章台独异人？
 <br>　　　　试看死生心似石，反令交道愧沉沦。
 <p><hr>
-<a href="chuke26.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke26.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
