--- a/ebooks/popnovel/paianjingqi_1/chuke26.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke26.html
@@ -297,5 +297,5 @@
 <p>　　　　庄家妇拣汉太分明，色中鬼争风忒没情。
 <br>　　　　舍得去后庭俞门子，装得来鬼脸林县君。
 <p><hr>
-<a href="chuke27.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke27.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
