--- a/ebooks/popnovel/paianjingqi_1/chuke28.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke28.html
@@ -188,5 +188,5 @@
 <p>　　　　玉虚洞里本前身，一梦回头八十春。
 <br>　　　　要识古今贤达者，阿谁不是再来人？
 <p><hr>
-<a href="chuke29.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke29.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
