--- a/ebooks/popnovel/paianjingqi_1/chuke30.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke30.html
@@ -193,5 +193,5 @@
 <p>　　　　冤债原从隔世深，相逢便起杀人心。
 <br>　　　　改头换面犹相报，何况容颜俨在今？
 <p><hr>
-<a href="chuke31.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke31.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
