--- a/ebooks/popnovel/paianjingqi_1/chuke31.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke31.html
@@ -529,5 +529,5 @@
 <p>　　　　四海纵横杀气冲，无端女寇犯山东。
 <br>　　　　吹萧一夕妖氛尽，月缺花残送落风。
 <p><hr>
-<a href="chuke32.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke32.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
