--- a/ebooks/popnovel/paianjingqi_1/chuke35.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke35.html
@@ -304,5 +304,5 @@
 <p>　　　　想为人禀命生于世，但做事不可瞒天地。
 <br>　　　　贫与富一定不可移，笑愚民枉使欺心计。
 <p><hr>
-<a href="chuke36.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke36.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
