--- a/ebooks/popnovel/paianjingqi_1/chuke36.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke36.html
@@ -230,5 +230,5 @@
 <p>　　　　有生总在业冤中，吾到无生始是空。
 <br>　　　　若是尘心全不起，凭他宿债也消融。
 <p><hr>
-<a href="chuke37.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke37.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
