--- a/ebooks/popnovel/paianjingqi_1/chuke39.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke39.html
@@ -230,5 +230,5 @@
 <p>　　　　尽道天师术有灵，如何永底不回生？
 <br>　　　　试看甘雨随车后，始信如神是至诚。
 <p><hr>
-<a href="chuke40.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke40.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
