--- a/ebooks/popnovel/paianjingqi_1/chuke40.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke40.html
@@ -265,5 +265,5 @@
 <br>　　　　富贵只缘承巧凑，应知难改盖棺期。
 <p>　　　　全书完
 <p><hr>
-<a href="_content.html">回目录</a></body></html>
+<a href="content.html">回目录</a></body></html>
 <p>　　
