--- a/ebooks/popnovel/paianjingqi_1/chuke02.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke02.html
@@ -361,5 +361,5 @@
 <p>　　　　一样良家走歧路，又同歧路转良家。
 <br>　　　　面庞怪道能相似，相法看来也不差。
 <p><hr>
-<a href="chuke03.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke03.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
