--- a/ebooks/popnovel/paianjingqi_1/chuke03.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke03.html
@@ -183,5 +183,5 @@
 <p>　　　　英雄从古轻一掷，盗亦有道真堪述。
 <br>　　　　笑取千金偿百金，途中竟是好相识。
 <p><hr>
-<a href="chuke04.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke04.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
