--- a/ebooks/popnovel/paianjingqi_1/chuke05.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke05.html
@@ -189,5 +189,5 @@
 <br>　　　　虎是神差，佳期不挫。
 <br>　　　　如此媒人，东道难做。
 <p><hr>
-<a href="chuke06.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke06.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
