--- a/ebooks/popnovel/paianjingqi_1/chuke06.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke06.html
@@ -350,5 +350,5 @@
 <p>　　　　好花零落损芳香，只为当春漏隙光。
 <br>　　　　一句良言须听取，妇人不可出闺房。
 <p><hr>
-<a href="chuke07.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke07.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
