--- a/ebooks/popnovel/paianjingqi_1/chuke09.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke09.html
@@ -185,5 +185,5 @@
 <p>　　平章府轿抬死女，清安寺漆整空棺。
 若不是生前分定，几曾有死后重欢！
 <p><hr>
-<a href="chuke10.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke10.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
