--- a/ebooks/popnovel/paianjingqi_1/chuke13.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke13.html
@@ -232,5 +232,5 @@
 <p>　　　　由来天网恢恢，何曾漏却阿谁？
 <br>　　　　王法还须推勘，神明料不差池。
 <p><hr>
-<a href="chuke14.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke14.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
