--- a/ebooks/popnovel/paianjingqi_1/chuke22.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke22.html
@@ -254,5 +254,5 @@
 <p>　　　　富不必骄，贫不必怨。
 <br>　　　　要看到头，眼前不算。
 <p><hr>
-<a href="chuke23.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke23.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
