--- a/ebooks/popnovel/paianjingqi_1/chuke23.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke23.html
@@ -267,5 +267,5 @@
 <p>　　　　大姊精灵，小姨身体。
 <br>　　　　到得圆成，无此无彼。
 <p><hr>
-<a href="chuke24.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke24.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
