--- a/ebooks/popnovel/paianjingqi_1/chuke27.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke27.html
@@ -304,5 +304,5 @@
 <br>　　　　芙蓉画出原双蒂，萍藻浮来亦共联。
 <br>　　　　可惜白杨堪作柱，空教洒泪及黄泉。
 <p><hr>
-<a href="chuke28.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke28.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
