--- a/ebooks/popnovel/paianjingqi_1/chuke29.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke29.html
@@ -401,5 +401,5 @@
 <p>　　　　漫说囹圄是福堂，谁知在内报新郎？
 <br>　　　　不是一番寒彻骨，怎得梅花扑鼻香？
 <p><hr>
-<a href="chuke30.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke30.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
