--- a/ebooks/popnovel/paianjingqi_1/chuke32.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke32.html
@@ -252,5 +252,5 @@
 <br>　　　　诱人荡败，自己绸缪。一朝身去，田土人收。
 <br>　　　　眼前还报，不爽一筹。奉劝世人，莫爱风流！
 <p><hr>
-<a href="chuke33.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke33.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
