--- a/ebooks/popnovel/paianjingqi_1/chuke33.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke33.html
@@ -237,5 +237,5 @@
 <p>　　　　螟蛉义父犹施德，骨肉天亲反弄奸。
 <br>　　　　日后方知前数定，何如休要用机关。
 <p><hr>
-<a href="chuke34.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke34.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
