--- a/ebooks/popnovel/paianjingqi_1/chuke34.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke34.html
@@ -399,5 +399,5 @@
 <p>　　　　主婚靡不仗天公，堪叹人生尽聩聋。
 <br>　　　　若道姻缘人可强，氤氲使者有何功？
 <p><hr>
-<a href="chuke35.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke35.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
