--- a/ebooks/popnovel/paianjingqi_1/chuke37.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke37.html
@@ -187,5 +187,5 @@
 <br>　　　　何不当生日，随意作方便？
 <br>　　　　度他即自度，应作如是观。
 <p><hr>
-<a href="chuke38.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke38.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
