--- a/ebooks/popnovel/paianjingqi_1/chuke38.html
+++ b/ebooks/popnovel/paianjingqi_1/chuke38.html
@@ -250,5 +250,5 @@
 <p>　　　　女婿如何有异图？总因财利令亲疏。
 <br>　　　　若非孝女关疼热，毕竟刘家有后无？
 <p><hr>
-<a href="chuke39.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="chuke39.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
 <p>　　
