--- a/ebooks/popnovel/paianjingqi_2/2ke02.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke02.html
@@ -424,4 +424,4 @@
 <p>　　　　国手惟争一着先，个中藏着好烟缘。
 <br>　　　　绿窗相对无余事，演谱推敲思入玄。
 <p><hr>
-<a href="2ke03.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke03.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
