--- a/ebooks/popnovel/paianjingqi_2/2ke03.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke03.html
@@ -335,4 +335,4 @@
 <p>　　　　世间百物总凭缘，大海浮萍有偶然。
 <br>　　　　不向长安买钿盒，何从千里配蝉娟？
 <p><hr>
-<a href="2ke04.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke04.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
