--- a/ebooks/popnovel/paianjingqi_2/2ke07.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke07.html
@@ -282,4 +282,4 @@
 <p>　　公卿宣淫，误人儿女。不遇手援，焉复其所？
 <br>　　瞻彼穹庐，涕零如雨。千载伤心，王孙帝主。
 <p><hr>
-<a href="2ke08.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke08.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
