--- a/ebooks/popnovel/paianjingqi_2/2ke08.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke08.html
@@ -257,4 +257,4 @@
 <p>　　　　漫道良朋作胜游，谁知胠筐有阴谋？
 <br>　　　　情闺不是闲人到，只为痴心错下筹。
 <p><hr>
-<a href="2ke09.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke09.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
