--- a/ebooks/popnovel/paianjingqi_2/2ke09.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke09.html
@@ -383,4 +383,4 @@
 <p>　　　　从来女侠会怜才，到底姻成亦异哉！
 <br>　　　　也右惊分终不偶，独含幽怨向琴台。
 <p><hr>
-<a href="2ke10.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke10.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
