--- a/ebooks/popnovel/paianjingqi_2/2ke10.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke10.html
@@ -274,4 +274,4 @@
 <br>　　　　渔翁坐得利，鹤蚌在相持。
 <br>　　　　何如存一让，是名不漏卮？
 <p><hr>
-<a href="2ke11.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke11.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
