--- a/ebooks/popnovel/paianjingqi_2/2ke11.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke11.html
@@ -339,4 +339,4 @@
 <br>　　　　痴心女子负心汉，谁道阴中有判断？
 <br>　　　　虽然自古皆有死，这回死得不好看。
 <p><hr>
-<a href="2ke12.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke12.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
