--- a/ebooks/popnovel/paianjingqi_2/2ke12.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke12.html
@@ -210,4 +210,4 @@
 <br>　　　　含颦带笑出狴犴，寄声合眼闭眉汉。
 <br>　　　　山花满斗归夫来，于潢自有梁鸿案。
 <p><hr>
-<a href="2ke13.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke13.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
