--- a/ebooks/popnovel/paianjingqi_2/2ke16.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke16.html
@@ -237,4 +237,4 @@
 <p>　　　　阳间不辨到阴间，阴间仍旧判阳还。
 <br>　　　　纵是世人终不死，也须难使到头顽。
 <p><hr>
-<a href="2ke17.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke17.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
