--- a/ebooks/popnovel/paianjingqi_2/2ke17.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke17.html
@@ -485,4 +485,4 @@
 <p>　　　　世上夸称女丈失，不闻巾帼竟为懦。
 <br>　　　　朝廷若也开科取，未必无人待贾沽。
 <p><hr>
-<a href="2ke18.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke18.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
