--- a/ebooks/popnovel/paianjingqi_2/2ke18.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke18.html
@@ -303,4 +303,4 @@
 <br>　　　　纵有神仙累劫修，不及庸流眼前力。
 <br>　　　　一盆火内练能成，两片皮中抽得出。
 <p><hr>
-<a href="2ke19.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke19.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
