--- a/ebooks/popnovel/paianjingqi_2/2ke20.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke20.html
@@ -240,4 +240,4 @@
 <p>　　　　周亲忍去骗孤孀，到此良心已尽亡。
 <br>　　　　善恶到头如不报，空中每欲借巡江。
 <p><hr>
-<a href="2ke21.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke21.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
