--- a/ebooks/popnovel/paianjingqi_2/2ke21.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke21.html
@@ -385,4 +385,4 @@
 <p>　　　　世间经目未为真，疑似由来易枉人。
 <br>　　　　寄语刑官须仔细，狱中尽有负冤魂。
 <p><hr>
-<a href="2ke22.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke22.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
