--- a/ebooks/popnovel/paianjingqi_2/2ke22.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke22.html
@@ -325,4 +325,4 @@
 <p>　　　　贫富交情只自知，翟公何必署门楣？
 <br>　　　　今朝败子回头日，便是奸徒退运时。
 <p><hr>
-<a href="2ke24.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke24.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
