--- a/ebooks/popnovel/paianjingqi_2/2ke25.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke25.html
@@ -242,4 +242,4 @@
 <p>　　　　男子何当整女容？致令恶少起顽凶。
 <br>　　　　今进试看含香蕊，已动当年函谷封。
 <p><hr>
-<a href="2ke26.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke26.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
