--- a/ebooks/popnovel/paianjingqi_2/2ke26.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke26.html
@@ -252,4 +252,4 @@
 <p>　　　　广文也有遇时人，自是人情有假真。
 <br>　　　　不遇门生能报德，何缘爱女复思亲？
 <p><hr>
-<a href="2ke27.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke27.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
