--- a/ebooks/popnovel/paianjingqi_2/2ke27.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke27.html
@@ -253,4 +253,4 @@
 <p>　　　　自是英雄作用殊，虎狼可狎与同居。
 <br>　　　　不须窃伺骊龙睡，已得探还颔下珠。
 <p><hr>
-<a href="2ke28.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke28.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
