--- a/ebooks/popnovel/paianjingqi_2/2ke28.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke28.html
@@ -241,4 +241,4 @@
 <br>　　　　彼黠者徒恣强暴，将此头颅向何许？
 <br>　　　　幽兔郁积十年余，彼处有头欲出土。
 <p><hr>
-<a href="2ke29.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke29.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
