--- a/ebooks/popnovel/paianjingqi_2/2ke29.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke29.html
@@ -254,4 +254,4 @@
 之也。思虑不起，天君泰然，即狐何为？然以祸始而以福终，亦生厚幸。虽然，狐媒犹狐媚
 也，终死色刃矣！
 <p><hr>
-<a href="2ke30.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke30.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
