--- a/ebooks/popnovel/paianjingqi_2/2ke30.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke30.html
@@ -252,4 +252,4 @@
 <p>　　　　二百年前一鬼魂，犹能生子在乾坤。
 <br>　　　　遗骸掩处阴功重，始信骷髅解报恩。
 <p><hr>
-<a href="2ke31.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke31.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
