--- a/ebooks/popnovel/paianjingqi_2/2ke31.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke31.html
@@ -216,4 +216,4 @@
 <br>　　　　一朝及其期，地下遂相寻。
 <br>　　　　似此孝与烈，堪为簿俗箴。
 <p><hr>
-<a href="2ke32.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke32.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
