--- a/ebooks/popnovel/paianjingqi_2/2ke32.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke32.html
@@ -225,4 +225,4 @@
 <p>　　　　娶妾先妻亦偶然，岂知弃妾更心坚？
 <br>　　　　归来万里由前定，善念阴中必保全！
 <p><hr>
-<a href="2ke33.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke33.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
