--- a/ebooks/popnovel/paianjingqi_2/2ke33.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke33.html
@@ -231,4 +231,4 @@
 <p>　　异术在身，可以惊世。若非夙缘，不堪轻试。
 <br>　　杖既难逃，钱岂妄觊？不过前知，游戏三昧。
 <p><hr>
-<a href="2ke34.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke34.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
