--- a/ebooks/popnovel/paianjingqi_2/2ke34.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke34.html
@@ -360,4 +360,4 @@
 <p>　　　　削会淫根淫已过，尚留残质共婆娑。
 <br>　　　　譬如宫女寻奄尹，一样多情奈若何！
 <p><hr>
-<a href="2ke35.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke35.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
