--- a/ebooks/popnovel/paianjingqi_2/2ke37.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke37.html
@@ -256,4 +256,4 @@
 <p>　　　　流落边关一俗商，却逢神眷不寻常。
 <br>　　　　宁知钟爱缘何许？谈罢令人欲断肠。
 <p><hr>
-<a href="2ke38.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke38.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
