--- a/ebooks/popnovel/paianjingqi_2/2ke39.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke39.html
@@ -432,4 +432,4 @@
 <p>　　　　世上于今半是君，犹然说得未均匀。
 <br>　　　　懒龙事迹从头看，岂必穿窬是小人！
 <p><hr>
-<a href="_content.html">回目录</a></body></html>
+<a href="content.html">回目录</a></body></html>
