--- a/ebooks/popnovel/paianjingqi_2/2ke01.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke01.html
@@ -284,4 +284,4 @@
 <p>　　　　伧父何知风雅缘？贪看古迹只因钱。
 <br>　　　　若教一卷都将去，宁不冤他白乐天！
 <p><hr>
-<a href="2ke02.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke02.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
