--- a/ebooks/popnovel/paianjingqi_2/2ke04.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke04.html
@@ -436,4 +436,4 @@
 <p>　　　　钱财有分苦争多，反自将身入网罗。
 <br>　　　　看取两家归束处，心机用尽竟如何？
 <p><hr>
-<a href="2ke05.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke05.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
