--- a/ebooks/popnovel/paianjingqi_2/2ke05.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke05.html
@@ -306,4 +306,4 @@
 <p>　　　　小时了了大时佳，五岁孩童已足夸。
 <br>　　　　计缚剧徒如反掌，直教天子送还家。
 <p><hr>
-<a href="2ke06.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke06.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
