--- a/ebooks/popnovel/paianjingqi_2/2ke06.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke06.html
@@ -290,4 +290,4 @@
 <p>　　　　连理何须一处栽？多情只愿死同埋。
 <br>　　　　试看金翠当年辛，愦愦将军更可哀！
 <p><hr>
-<a href="2ke07.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke07.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
