--- a/ebooks/popnovel/paianjingqi_2/2ke13.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke13.html
@@ -244,4 +244,4 @@
 <p>　　　　何缘世上多神鬼？只为人心有不平。
 <br>　　　　若使光明如白日，纵然有鬼也无灵。
 <p><hr>
-<a href="2ke14.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke14.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
