--- a/ebooks/popnovel/paianjingqi_2/2ke14.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke14.html
@@ -377,4 +377,4 @@
 <p>　　　　一脔肉味不曾尝，已谴缠头罄橐装。
 <br>　　　　尽道陷入无底侗，谁知洞口赚刘郎！
 <p><hr>
-<a href="2ke15.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke15.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
