--- a/ebooks/popnovel/paianjingqi_2/2ke15.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke15.html
@@ -341,4 +341,4 @@
 <p>　　　　美色当前谁不幕，况是酬恩去复来。
 <br>　　　　若使偶然通一笑，何缘椽吏入容台？
 <p><hr>
-<a href="2ke16.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke16.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
