--- a/ebooks/popnovel/paianjingqi_2/2ke19.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke19.html
@@ -251,4 +251,4 @@
 <p>　　　　总因一片婆心，日向痴人说梦。
 <br>　　　　此中打破关头，棒喝何须拈弄？
 <p><hr>
-<a href="2ke20.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke20.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
