--- a/ebooks/popnovel/paianjingqi_2/2ke24.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke24.html
@@ -264,4 +264,4 @@
 <p>　　　　一念起时神鬼至，何况前生夙世缘！
 <br>　　　　方知富室多悭吝，只为他人守业钱。
 <p><hr>
-<a href="2ke25.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke25.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
