--- a/ebooks/popnovel/paianjingqi_2/2ke35.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke35.html
@@ -262,4 +262,4 @@
 <p>　　　　姻缘分定不须忙，自有天公作主张。
 <br>　　　　不是一番寒彻骨，怎得梅花扑鼻香？
 <p><hr>
-<a href="2ke36.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke36.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
