--- a/ebooks/popnovel/paianjingqi_2/2ke36.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke36.html
@@ -288,4 +288,4 @@
 <p>　　　　休慕他人富贵，命中所有方真。
 <br>　　　　若要贪图非分，试看两个僧人。
 <p><hr>
-<a href="2ke37.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke37.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
