--- a/ebooks/popnovel/paianjingqi_2/2ke38.html
+++ b/ebooks/popnovel/paianjingqi_2/2ke38.html
@@ -279,4 +279,4 @@
 <p>　　　　枉坐囹固已数年，而今方得保蝉娟。
 <br>　　　　何如自守家常饭，不害官司不损钱？
 <p><hr>
-<a href="2ke39.html">下一卷</a>　<a href="_content.html">回目录</a></body></html>
+<a href="2ke39.html">下一卷</a>　<a href="content.html">回目录</a></body></html>
