--- a/ebooks/popnovel/rulinwaishi/rulin01.html
+++ b/ebooks/popnovel/rulinwaishi/rulin01.html
@@ -196,4 +196,4 @@
 <p>　　这不过是个“楔子”，下面还有正文。
 
  
-<p><hr><a href="rulin02.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin02.html">下一章</a>　<a href="content.html">回目录</a>
