--- a/ebooks/popnovel/rulinwaishi/rulin03.html
+++ b/ebooks/popnovel/rulinwaishi/rulin03.html
@@ -221,4 +221,4 @@
 <p>　　不知老太太性命如何？且听下回分解。
 
  
-<p><hr><a href="rulin04.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin04.html">下一章</a>　<a href="content.html">回目录</a>
