--- a/ebooks/popnovel/rulinwaishi/rulin04.html
+++ b/ebooks/popnovel/rulinwaishi/rulin04.html
@@ -170,4 +170,4 @@
 分教：‘贡生兴讼，潜踪来到省城；乡绅结亲，谒贵直游京国。’
 <p>　　
  
-<p><hr><a href="rulin05.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin05.html">下一章</a>　<a href="content.html">回目录</a>
