--- a/ebooks/popnovel/rulinwaishi/rulin05.html
+++ b/ebooks/popnovel/rulinwaishi/rulin05.html
@@ -189,4 +189,4 @@
 <p>　　不知赵氏说出甚么话来，且听下回分解。
 
  
-<p><hr><a href="rulin06.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin06.html">下一章</a>　<a href="content.html">回目录</a>
