--- a/ebooks/popnovel/rulinwaishi/rulin06.html
+++ b/ebooks/popnovel/rulinwaishi/rulin06.html
@@ -182,4 +182,4 @@
 <p>　　不知严贡生告状得准否，且听下回分解。
 
  
-<p><hr><a href="rulin07.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin07.html">下一章</a>　<a href="content.html">回目录</a>
