--- a/ebooks/popnovel/rulinwaishi/rulin08.html
+++ b/ebooks/popnovel/rulinwaishi/rulin08.html
@@ -169,4 +169,4 @@
 <p>　　毕竟此人是谁？且听下回分解。
 
  
-<p><hr><a href="rulin09.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin09.html">下一章</a>　<a href="content.html">回目录</a>
