--- a/ebooks/popnovel/rulinwaishi/rulin09.html
+++ b/ebooks/popnovel/rulinwaishi/rulin09.html
@@ -172,4 +172,4 @@
 <p>　　毕竟这船是那一位贵人？且听下回分解。
 
  
-<p><hr><a href="rulin10.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin10.html">下一章</a>　<a href="content.html">回目录</a>
