--- a/ebooks/popnovel/rulinwaishi/rulin10.html
+++ b/ebooks/popnovel/rulinwaishi/rulin10.html
@@ -165,4 +165,4 @@
 继家声，有若名师之教，草茅隐贤土，又招好客之踪。毕竟后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin11.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin11.html">下一章</a>　<a href="content.html">回目录</a>
