--- a/ebooks/popnovel/rulinwaishi/rulin11.html
+++ b/ebooks/popnovel/rulinwaishi/rulin11.html
@@ -166,4 +166,4 @@
 杨执中说出甚么人来，且听下回分解。
 
  
-<p><hr><a href="rulin12.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin12.html">下一章</a>　<a href="content.html">回目录</a>
