--- a/ebooks/popnovel/rulinwaishi/rulin15.html
+++ b/ebooks/popnovel/rulinwaishi/rulin15.html
@@ -165,4 +165,4 @@
 事之知，实至名归；反作终身之玷。不知后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin16.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin16.html">下一章</a>　<a href="content.html">回目录</a>
