--- a/ebooks/popnovel/rulinwaishi/rulin18.html
+++ b/ebooks/popnovel/rulinwaishi/rulin18.html
@@ -155,4 +155,4 @@
 ：婚姻就处，知为夙世之因；名誉隆时，不比时流之辈。毕竟此人是谁，且听下回分解。
 
  
-<p><hr><a href="rulin19.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin19.html">下一章</a>　<a href="content.html">回目录</a>
