--- a/ebooks/popnovel/rulinwaishi/rulin23.html
+++ b/ebooks/popnovel/rulinwaishi/rulin23.html
@@ -170,4 +170,4 @@
 端更起波澜；人外求人，有意做成交结。不知牛奶奶曾到安东去否，且听下回分解。
 
  
-<p><hr><a href="rulin24.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin24.html">下一章</a>　<a href="content.html">回目录</a>
