--- a/ebooks/popnovel/rulinwaishi/rulin25.html
+++ b/ebooks/popnovel/rulinwaishi/rulin25.html
@@ -163,4 +163,4 @@
 颓，波澜又兴多少。不知这来的官果然摘印与否，且听下回分解。
 
  
-<p><hr><a href="rulin26.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin26.html">下一章</a>　<a href="content.html">回目录</a>
