--- a/ebooks/popnovel/rulinwaishi/rulin29.html
+++ b/ebooks/popnovel/rulinwaishi/rulin29.html
@@ -160,4 +160,4 @@
 人了。”杜慎卿道：“小弟得会先生，也如成连先生刺船海上，令我移情，”只因这一番，
 有分教：风流高会，江南又见奇踪；卓荦英姿，海内都传雅韵。不知后事如何，且听下回分
 解。
-<p><hr><a href="rulin30.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin30.html">下一章</a>　<a href="content.html">回目录</a>
