--- a/ebooks/popnovel/rulinwaishi/rulin30.html
+++ b/ebooks/popnovel/rulinwaishi/rulin30.html
@@ -161,4 +161,4 @@
 慎卿寓处来见，当面叩谢。杜慎卿又称了二两金子，托鲍廷玺到银匠店里打造一只金怀，上
 刻“艳夺樱桃”四个字，特为奖赏郑魁官。别的都把荷包、银子、汗巾、诗扇领了去。
 <p>　　那些小旦，取在十名前的，他相与的大老官来看了榜，都忻忻得意，也有
-<p><hr><a href="rulin31.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin31.html">下一章</a>　<a href="content.html">回目录</a>
