--- a/ebooks/popnovel/rulinwaishi/rulin31.html
+++ b/ebooks/popnovel/rulinwaishi/rulin31.html
@@ -194,4 +194,4 @@
 士，一乡多济友朋；月地花天，四海又闻豪杰。不知后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin32.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin32.html">下一章</a>　<a href="content.html">回目录</a>
