--- a/ebooks/popnovel/rulinwaishi/rulin32.html
+++ b/ebooks/popnovel/rulinwaishi/rulin32.html
@@ -161,4 +161,4 @@
 豪举。毕竟后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin33.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin33.html">下一章</a>　<a href="content.html">回目录</a>
