--- a/ebooks/popnovel/rulinwaishi/rulin38.html
+++ b/ebooks/popnovel/rulinwaishi/rulin38.html
@@ -167,4 +167,4 @@
 么人来，且听下回分解。
 
  
-<p><hr><a href="rulin39.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin39.html">下一章</a>　<a href="content.html">回目录</a>
