--- a/ebooks/popnovel/rulinwaishi/rulin44.html
+++ b/ebooks/popnovel/rulinwaishi/rulin44.html
@@ -144,4 +144,4 @@
 推，又见同声之谊。毕竟书子里说些甚么，且听下回分解。
 
  
-<p><hr><a href="rulin45.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin45.html">下一章</a>　<a href="content.html">回目录</a>
