--- a/ebooks/popnovel/rulinwaishi/rulin46.html
+++ b/ebooks/popnovel/rulinwaishi/rulin46.html
@@ -164,4 +164,4 @@
 前，竟行非礼之事。毕竟后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="rulin47.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin47.html">下一章</a>　<a href="content.html">回目录</a>
