--- a/ebooks/popnovel/rulinwaishi/rulin48.html
+++ b/ebooks/popnovel/rulinwaishi/rulin48.html
@@ -158,4 +158,4 @@
 且听下回分解。
 
  
-<p><hr><a href="rulin49.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin49.html">下一章</a>　<a href="content.html">回目录</a>
