--- a/ebooks/popnovel/rulinwaishi/rulin50.html
+++ b/ebooks/popnovel/rulinwaishi/rulin50.html
@@ -135,4 +135,4 @@
 下回分解。
 
  
-<p><hr><a href="rulin51.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin51.html">下一回</a>　<a href="content.html">回目录</a>
