--- a/ebooks/popnovel/rulinwaishi/rulin52.html
+++ b/ebooks/popnovel/rulinwaishi/rulin52.html
@@ -165,4 +165,4 @@
 府内，同飞玩雪之筋；来宾楼中，忽讶深宵之梦。毕竟怎样一个来宾楼，且听下回分解。
 <p>　　
  
-<p><hr><a href="rulin53.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin53.html">下一回</a>　<a href="content.html">回目录</a>
