--- a/ebooks/popnovel/rulinwaishi/xuyan.html
+++ b/ebooks/popnovel/rulinwaishi/xuyan.html
@@ -39,4 +39,4 @@
 ，依其它各本改正了个别错字。
 <p>　　　　　　　　　　　　洪江
 <p>　　　　　　　　一九九一年二月
-<p><hr><a href="rulin01.html">第一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin01.html">第一章</a>　<a href="content.html">回目录</a>
