--- a/ebooks/popnovel/rulinwaishi/rulin02.html
+++ b/ebooks/popnovel/rulinwaishi/rulin02.html
@@ -174,4 +174,4 @@
 <p>　　未知周进性命如何？且听下回分解。
 
  
-<p><hr><a href="rulin03.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin03.html">下一章</a>　<a href="content.html">回目录</a>
