--- a/ebooks/popnovel/rulinwaishi/rulin07.html
+++ b/ebooks/popnovel/rulinwaishi/rulin07.html
@@ -173,4 +173,4 @@
 员外是何喜事，且听下回分解。
 
  
-<p><hr><a href="rulin08.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin08.html">下一章</a>　<a href="content.html">回目录</a>
