--- a/ebooks/popnovel/rulinwaishi/rulin12.html
+++ b/ebooks/popnovel/rulinwaishi/rulin12.html
@@ -169,4 +169,4 @@
 毕竟如何，且听下回分解。
 
  
-<p><hr><a href="rulin13.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin13.html">下一章</a>　<a href="content.html">回目录</a>
