--- a/ebooks/popnovel/rulinwaishi/rulin13.html
+++ b/ebooks/popnovel/rulinwaishi/rulin13.html
@@ -173,4 +173,4 @@
 银子赎这枕箱，且听下回分解。
 
  
-<p><hr><a href="rulin14.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin14.html">下一章</a>　<a href="content.html">回目录</a>
