--- a/ebooks/popnovel/rulinwaishi/rulin14.html
+++ b/ebooks/popnovel/rulinwaishi/rulin14.html
@@ -161,4 +161,4 @@
 毕竟此人是谁，且听下回分解。
 
  
-<p><hr><a href="rulin15.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin15.html">下一章</a>　<a href="content.html">回目录</a>
