--- a/ebooks/popnovel/rulinwaishi/rulin16.html
+++ b/ebooks/popnovel/rulinwaishi/rulin16.html
@@ -164,4 +164,4 @@
 科第取来，心只系乎两榜。未知匡超人这一考得进学否，且听下回分解。
 
  
-<p><hr><a href="rulin17.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin17.html">下一章</a>　<a href="content.html">回目录</a>
