--- a/ebooks/popnovel/rulinwaishi/rulin17.html
+++ b/ebooks/popnovel/rulinwaishi/rulin17.html
@@ -168,4 +168,4 @@
 将选取。不知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="rulin18.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin18.html">下一章</a>　<a href="content.html">回目录</a>
