--- a/ebooks/popnovel/rulinwaishi/rulin19.html
+++ b/ebooks/popnovel/rulinwaishi/rulin19.html
@@ -170,4 +170,4 @@
 友各分张，难言兰臭。毕竟后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin20.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin20.html">下一章</a>　<a href="content.html">回目录</a>
