--- a/ebooks/popnovel/rulinwaishi/rulin20.html
+++ b/ebooks/popnovel/rulinwaishi/rulin20.html
@@ -151,4 +151,4 @@
 甚名谁，且听下回分解。
 
  
-<p><hr><a href="rulin21.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin21.html">下一章</a>　<a href="content.html">回目录</a>
