--- a/ebooks/popnovel/rulinwaishi/rulin21.html
+++ b/ebooks/popnovel/rulinwaishi/rulin21.html
@@ -161,4 +161,4 @@
 何，且听下回分解。
 
  
-<p><hr><a href="rulin22.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin22.html">下一章</a>　<a href="content.html">回目录</a>
