--- a/ebooks/popnovel/rulinwaishi/rulin22.html
+++ b/ebooks/popnovel/rulinwaishi/rulin22.html
@@ -176,4 +176,4 @@
 分解。
 
  
-<p><hr><a href="rulin23.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin23.html">下一章</a>　<a href="content.html">回目录</a>
