--- a/ebooks/popnovel/rulinwaishi/rulin24.html
+++ b/ebooks/popnovel/rulinwaishi/rulin24.html
@@ -167,4 +167,4 @@
 弟亦被恩光。毕竟不知鲍文卿遇的是个甚么人，月听下回分解。
 
  
-<p><hr><a href="rulin25.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin25.html">下一章</a>　<a href="content.html">回目录</a>
