--- a/ebooks/popnovel/rulinwaishi/rulin26.html
+++ b/ebooks/popnovel/rulinwaishi/rulin26.html
@@ -164,4 +164,4 @@
 兄弟。不知这亲事说成否，且听下回分解。
 
  
-<p><hr><a href="rulin27.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin27.html">下一章</a>　<a href="content.html">回目录</a>
