--- a/ebooks/popnovel/rulinwaishi/rulin27.html
+++ b/ebooks/popnovel/rulinwaishi/rulin27.html
@@ -152,4 +152,4 @@
 来，且听下回分解。
 
  
-<p><hr><a href="rulin28.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin28.html">下一章</a>　<a href="content.html">回目录</a>
