--- a/ebooks/popnovel/rulinwaishi/rulin28.html
+++ b/ebooks/popnovel/rulinwaishi/rulin28.html
@@ -167,4 +167,4 @@
 集，鸡群来皎鹤之翔。不知后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin29.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin29.html">下一章</a>　<a href="content.html">回目录</a>
