--- a/ebooks/popnovel/rulinwaishi/rulin33.html
+++ b/ebooks/popnovel/rulinwaishi/rulin33.html
@@ -167,4 +167,4 @@
 回分解。
 
  
-<p><hr><a href="rulin34.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin34.html">下一章</a>　<a href="content.html">回目录</a>
