--- a/ebooks/popnovel/rulinwaishi/rulin34.html
+++ b/ebooks/popnovel/rulinwaishi/rulin34.html
@@ -182,4 +182,4 @@
 后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin35.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin35.html">下一章</a>　<a href="content.html">回目录</a>
