--- a/ebooks/popnovel/rulinwaishi/rulin35.html
+++ b/ebooks/popnovel/rulinwaishi/rulin35.html
@@ -149,4 +149,4 @@
  
 
  
-<p><hr><a href="rulin36.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin36.html">下一章</a>　<a href="content.html">回目录</a>
