--- a/ebooks/popnovel/rulinwaishi/rulin36.html
+++ b/ebooks/popnovel/rulinwaishi/rulin36.html
@@ -165,4 +165,4 @@
  
 
  
-<p><hr><a href="rulin37.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin37.html">下一章</a>　<a href="content.html">回目录</a>
