--- a/ebooks/popnovel/rulinwaishi/rulin37.html
+++ b/ebooks/popnovel/rulinwaishi/rulin37.html
@@ -182,4 +182,4 @@
 中；远水远山，又入蚕丛之境。毕竟后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="rulin38.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin38.html">下一章</a>　<a href="content.html">回目录</a>
