--- a/ebooks/popnovel/rulinwaishi/rulin39.html
+++ b/ebooks/popnovel/rulinwaishi/rulin39.html
@@ -147,4 +147,4 @@
 封，徒博数奇之叹。不知萧云仙怎样修城，旦听下回分解。
 
  
-<p><hr><a href="rulin40.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin40.html">下一章</a>　<a href="content.html">回目录</a>
