--- a/ebooks/popnovel/rulinwaishi/rulin40.html
+++ b/ebooks/popnovel/rulinwaishi/rulin40.html
@@ -171,4 +171,4 @@
 竟后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin41.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin41.html">下一章</a>　<a href="content.html">回目录</a>
