--- a/ebooks/popnovel/rulinwaishi/rulin41.html
+++ b/ebooks/popnovel/rulinwaishi/rulin41.html
@@ -173,4 +173,4 @@
 解。
 
  
-<p><hr><a href="rulin42.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin42.html">下一章</a>　<a href="content.html">回目录</a>
