--- a/ebooks/popnovel/rulinwaishi/rulin43.html
+++ b/ebooks/popnovel/rulinwaishi/rulin43.html
@@ -161,4 +161,4 @@
 窀穸。未知后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="rulin44.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin44.html">下一章</a>　<a href="content.html">回目录</a>
