--- a/ebooks/popnovel/rulinwaishi/rulin45.html
+++ b/ebooks/popnovel/rulinwaishi/rulin45.html
@@ -166,4 +166,4 @@
 藏俊彦；数米量柴之外，别有经纶，毕竟后事如何，且听下回分解。
 <p>　　
  
-<p><hr><a href="rulin46.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin46.html">下一章</a>　<a href="content.html">回目录</a>
