--- a/ebooks/popnovel/rulinwaishi/rulin47.html
+++ b/ebooks/popnovel/rulinwaishi/rulin47.html
@@ -167,4 +167,4 @@
 逢贤哲。毕竟后事如何，且听下回分解。
 
  
-<p><hr><a href="rulin48.html">下一章</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin48.html">下一章</a>　<a href="content.html">回目录</a>
