--- a/ebooks/popnovel/rulinwaishi/rulin49.html
+++ b/ebooks/popnovel/rulinwaishi/rulin49.html
@@ -147,4 +147,4 @@
 力担承患难。未知后面如何，且听下回分解。
 
  
-<p><hr><a href="rulin50.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin50.html">下一回</a>　<a href="content.html">回目录</a>
