--- a/ebooks/popnovel/rulinwaishi/rulin51.html
+++ b/ebooks/popnovel/rulinwaishi/rulin51.html
@@ -123,4 +123,4 @@
 来寻甚么人，且听下回分解。
 
  
-<p><hr><a href="rulin52.html">下一回</a>　<a href="_content.html">回目录</a>
+<p><hr><a href="rulin52.html">下一回</a>　<a href="content.html">回目录</a>
