--- a/ebooks/popnovel/xingshihengyan/xshy01.html
+++ b/ebooks/popnovel/xingshihengyan/xshy01.html
@@ -317,4 +317,4 @@
 　　试看两公阴德报，皇天不负好心人。
 <p>
 <hr>
-<a href="xshy02.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy02.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
