--- a/ebooks/popnovel/xingshihengyan/xshy03.html
+++ b/ebooks/popnovel/xingshihengyan/xshy03.html
@@ -760,4 +760,4 @@
 　　堪爱豪家多子弟，风流不及卖油人。
 <p>
 <hr>
-<a href="xshy04.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy04.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
