--- a/ebooks/popnovel/xingshihengyan/xshy04.html
+++ b/ebooks/popnovel/xingshihengyan/xshy04.html
@@ -440,4 +440,4 @@
 　　草木同升随拔宅，淮南不用炼黄金。
 <p>
 <hr>
-<a href="xshy05.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy05.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
