--- a/ebooks/popnovel/xingshihengyan/xshy05.html
+++ b/ebooks/popnovel/xingshihengyan/xshy05.html
@@ -280,4 +280,4 @@
 　　奉劝人行方便事，得饶人处且饶人。
 <p>
 <hr>
-<a href="xshy06.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy06.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
