--- a/ebooks/popnovel/xingshihengyan/xshy08.html
+++ b/ebooks/popnovel/xingshihengyan/xshy08.html
@@ -461,4 +461,4 @@
 　　锦被一床遮尽丑，乔公不枉叫青天。
 <p>
 <hr>
-<a href="xshy09.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy09.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
