--- a/ebooks/popnovel/xingshihengyan/xshy10.html
+++ b/ebooks/popnovel/xingshihengyan/xshy10.html
@@ -338,4 +338,4 @@
 　　三义村中传美誉，河西千载想奇人。
 <p>
 <hr>
-<a href="xshy11.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy11.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
