--- a/ebooks/popnovel/xingshihengyan/xshy12.html
+++ b/ebooks/popnovel/xingshihengyan/xshy12.html
@@ -177,5 +177,5 @@
 　　若非佛力无边大，那得慈航渡爱河！
 <p>
 <hr>
-<a href="xshy13.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy13.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
