--- a/ebooks/popnovel/xingshihengyan/xshy14.html
+++ b/ebooks/popnovel/xingshihengyan/xshy14.html
@@ -307,5 +307,5 @@
 　　若把无情有情比，无情翻似得便宜。
 <p>
 <hr>
-<a href="xshy15.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy15.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
