--- a/ebooks/popnovel/xingshihengyan/xshy20.html
+++ b/ebooks/popnovel/xingshihengyan/xshy20.html
@@ -1153,5 +1153,5 @@
 　　凡事但将天理念，安心自有福来迎。
 <p>
 <hr>
-<a href="xshy21.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy21.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
