--- a/ebooks/popnovel/xingshihengyan/xshy21.html
+++ b/ebooks/popnovel/xingshihengyan/xshy21.html
@@ -258,5 +258,5 @@
 　　凡事必须留后着，他年方不悔当初。
 <p>
 <hr>
-<a href="xshy22.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy22.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
