--- a/ebooks/popnovel/xingshihengyan/xshy22.html
+++ b/ebooks/popnovel/xingshihengyan/xshy22.html
@@ -346,5 +346,5 @@
 ¡¡¡¡Óñ»ÊÎ´ÓÐÌì·ûÖÁ£¬ÇÒ»õÎÚ½ð»ìÊÀÁ÷¡£
 <p>
 <hr>
-<a href="xshy23.html">ÏÂÒ»¾í</a>  <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="xshy23.html">ÏÂÒ»¾í</a>  <a href="content.html">»ØÄ¿Â¼</a>
 </body></html>
