--- a/ebooks/popnovel/xingshihengyan/xshy26.html
+++ b/ebooks/popnovel/xingshihengyan/xshy26.html
@@ -474,5 +474,5 @@
 　　识破幻形不碍性，体形修性即仙真。
 <p>
 <hr>
-<a href="xshy27.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy27.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
