--- a/ebooks/popnovel/xingshihengyan/xshy30.html
+++ b/ebooks/popnovel/xingshihengyan/xshy30.html
@@ -652,5 +652,5 @@
 　　安得剑仙床下士，人间遍取不平人。
 <p>
 <hr>
-<a href="xshy31.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy31.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
