--- a/ebooks/popnovel/xingshihengyan/xshy31.html
+++ b/ebooks/popnovel/xingshihengyan/xshy31.html
@@ -405,5 +405,5 @@
 ¡¡¡¡ÔËÀ´×ÔÓÐÒòÔµµ½£¬µ½ÊÖÐÝÏÓÔç¹²³Ù¡£
 <p>
 <hr>
-<a href="xshy32.html">ÏÂÒ»¾í</a>  <a href="_content.html">»ØÄ¿Â¼</a>
+<a href="xshy32.html">ÏÂÒ»¾í</a>  <a href="content.html">»ØÄ¿Â¼</a>
 </body></html>
