--- a/ebooks/popnovel/xingshihengyan/xshy32.html
+++ b/ebooks/popnovel/xingshihengyan/xshy32.html
@@ -385,5 +385,5 @@
 　　死生离合皆前定，不是姻缘莫强争。
 <p>
 <hr>
-<a href="xshy33.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy33.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
