--- a/ebooks/popnovel/xingshihengyan/xshy33.html
+++ b/ebooks/popnovel/xingshihengyan/xshy33.html
@@ -338,5 +338,5 @@
 　　劝君出话须诚实，口舌从来是祸基。
 <p>
 <hr>
-<a href="xshy34.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy34.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
