--- a/ebooks/popnovel/xingshihengyan/xshy36.html
+++ b/ebooks/popnovel/xingshihengyan/xshy36.html
@@ -584,5 +584,5 @@
 　　堪笑硁硁真小谅，不成一事枉嗟咨。
 <p>
 <hr>
-<a href="xshy37.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy37.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
