--- a/ebooks/popnovel/xingshihengyan/xshy02.html
+++ b/ebooks/popnovel/xingshihengyan/xshy02.html
@@ -234,4 +234,4 @@
 　　安得尽居孝弟里，却把阋墙人愧死。
 <p>
 <hr>
-<a href="xshy03.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy03.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
