--- a/ebooks/popnovel/xingshihengyan/xshy06.html
+++ b/ebooks/popnovel/xingshihengyan/xshy06.html
@@ -340,4 +340,4 @@
 　　家破业荒书又去，令人千载笑王臣。
 <p>
 <hr>
-<a href="xshy07.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy07.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
