--- a/ebooks/popnovel/xingshihengyan/xshy07.html
+++ b/ebooks/popnovel/xingshihengyan/xshy07.html
@@ -449,4 +449,4 @@
 　　可怜一片吴江月，冷照鸳鸯湖上飞。
 <p>
 <hr>
-<a href="xshy08.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy08.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
