--- a/ebooks/popnovel/xingshihengyan/xshy09.html
+++ b/ebooks/popnovel/xingshihengyan/xshy09.html
@@ -327,4 +327,4 @@
 　　只为二人多节义，死生不解赖神明。
 <p>
 <hr>
-<a href="xshy10.html">下一卷</a>  <a href="_content.html">回目录</a></body></html>
+<a href="xshy10.html">下一卷</a>  <a href="content.html">回目录</a></body></html>
