--- a/ebooks/popnovel/xingshihengyan/xshy11.html
+++ b/ebooks/popnovel/xingshihengyan/xshy11.html
@@ -334,5 +334,5 @@
 　　三难新郎真异事，一门秀气世间无。
 <p>
 <hr>
-<a href="xshy12.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy12.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
