--- a/ebooks/popnovel/xingshihengyan/xshy13.html
+++ b/ebooks/popnovel/xingshihengyan/xshy13.html
@@ -515,5 +515,5 @@
 　　自古奸淫应横死，神通纵有不相饶。
 <p>
 <hr>
-<a href="xshy14.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy14.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
