--- a/ebooks/popnovel/xingshihengyan/xshy15.html
+++ b/ebooks/popnovel/xingshihengyan/xshy15.html
@@ -614,5 +614,5 @@
 　　名庵并入游仙梦，是色非空作笑谈。
 <p>
 <hr>
-<a href="xshy16.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy16.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
