--- a/ebooks/popnovel/xingshihengyan/xshy16.html
+++ b/ebooks/popnovel/xingshihengyan/xshy16.html
@@ -538,5 +538,5 @@
 　　奸赌两般得不染，太平无事做人家。
 <p>
 <hr>
-<a href="xshy17.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy17.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
