--- a/ebooks/popnovel/xingshihengyan/xshy17.html
+++ b/ebooks/popnovel/xingshihengyan/xshy17.html
@@ -554,5 +554,5 @@
 　　多少竞财疏骨肉，应知无面向嵩山。
 <p>
 <hr>
-<a href="xshy18.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy18.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
