--- a/ebooks/popnovel/xingshihengyan/xshy18.html
+++ b/ebooks/popnovel/xingshihengyan/xshy18.html
@@ -481,5 +481,5 @@
 　　滩阙巧逢恩义报，好人到底得便宜。
 <p>
 <hr>
-<a href="xshy19.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy19.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
