--- a/ebooks/popnovel/xingshihengyan/xshy19.html
+++ b/ebooks/popnovel/xingshihengyan/xshy19.html
@@ -389,5 +389,5 @@
 　　分鞋今日再成双，留与千秋作话说。
 <p>
 <hr>
-<a href="xshy20.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy20.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
