--- a/ebooks/popnovel/xingshihengyan/xshy23.html
+++ b/ebooks/popnovel/xingshihengyan/xshy23.html
@@ -833,5 +833,5 @@
 　　孤身客死倩人怜，万古传名为逆贼。
 <p>
 <hr>
-<a href="xshy24.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy24.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
