--- a/ebooks/popnovel/xingshihengyan/xshy24.html
+++ b/ebooks/popnovel/xingshihengyan/xshy24.html
@@ -364,5 +364,5 @@
 　　锦帆未落干戈起，惆怅龙舟不更回。
 <p>
 <hr>
-<a href="xshy25.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy25.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
