--- a/ebooks/popnovel/xingshihengyan/xshy25.html
+++ b/ebooks/popnovel/xingshihengyan/xshy25.html
@@ -557,5 +557,5 @@
 　　莫怪痴人频做梦，怪他说梦亦痴人。
 <p>
 <hr>
-<a href="xshy26.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy26.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
