--- a/ebooks/popnovel/xingshihengyan/xshy27.html
+++ b/ebooks/popnovel/xingshihengyan/xshy27.html
@@ -731,5 +731,5 @@
 　　假饶血化西江水，难洗黄泉一段羞。
 <p>
 <hr>
-<a href="xshy28.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy28.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
