--- a/ebooks/popnovel/xingshihengyan/xshy28.html
+++ b/ebooks/popnovel/xingshihengyan/xshy28.html
@@ -452,5 +452,5 @@
 　　百岁姻缘床下就，丽情千古播词常
 <p>
 <hr>
-<a href="xshy29.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy29.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
