--- a/ebooks/popnovel/xingshihengyan/xshy29.html
+++ b/ebooks/popnovel/xingshihengyan/xshy29.html
@@ -701,5 +701,5 @@
 　　劝人休蹈卢公辙，凡事还须学谨谦。
 <p>
 <hr>
-<a href="xshy30.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy30.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
