--- a/ebooks/popnovel/xingshihengyan/xshy34.html
+++ b/ebooks/popnovel/xingshihengyan/xshy34.html
@@ -696,5 +696,5 @@
 　　劝汝舍财兼忍气，一生无事得安然。
 <p>
 <hr>
-<a href="xshy35.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy35.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
