--- a/ebooks/popnovel/xingshihengyan/xshy35.html
+++ b/ebooks/popnovel/xingshihengyan/xshy35.html
@@ -444,5 +444,5 @@
 　　托孤寄命真无愧，羞杀苍头不义侯。
 <p>
 <hr>
-<a href="xshy36.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy36.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
