--- a/ebooks/popnovel/xingshihengyan/xshy37.html
+++ b/ebooks/popnovel/xingshihengyan/xshy37.html
@@ -502,5 +502,5 @@
 　　慷慨丈夫终得道，白云朵朵上天梯。
 <p>
 <hr>
-<a href="xshy38.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy38.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
