--- a/ebooks/popnovel/xingshihengyan/xshy38.html
+++ b/ebooks/popnovel/xingshihengyan/xshy38.html
@@ -626,5 +626,5 @@
 　　尘世百年如旦暮，痴人犹把利名争。
 <p>
 <hr>
-<a href="xshy39.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy39.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
