--- a/ebooks/popnovel/xingshihengyan/xshy39.html
+++ b/ebooks/popnovel/xingshihengyan/xshy39.html
@@ -329,5 +329,5 @@
 　　从今勘破鸳鸯梦，泾渭分源莫混流。
 <p>
 <hr>
-<a href="xshy40.html">下一卷</a>  <a href="_content.html">回目录</a>
+<a href="xshy40.html">下一卷</a>  <a href="content.html">回目录</a>
 </body></html>
